Fix twitter search box visibility.

--- a/css/style.css
+++ b/css/style.css
@@ -929,6 +929,7 @@ a:hover {
     display: block;
 }
 
+.twitter-search_box,
 .twitter-trends,
 .twitter-profile {
     display: none;
@@ -1027,6 +1028,7 @@ a:hover {
         justify-content: center;
     }
 
+    .twitter-search_box,
     .twitter-trends {
         display: block;
     }
